<resources>
    <string name="app_name">网易云音乐</string>
    <string name="b1">手机号登陆</string>
    <string name="b2">注册</string>
    <string name="way">其他方式登录</string>
    <string name="wx">微信</string>
    <string name="qq">QQ</string>
    <string name="wb">微博</string>
    <string name="wy">网易邮箱</string>
    <string name="t1">手机号登陆</string>
    <string name="dl">登陆</string>
    <string name="zc">注册</string>
</resources>
